// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`NO_COLOR golden snapshot (chalk.level=0) > VXSE62-real @ standard=140 1`] = `
"
╔══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╗
║ 長周期地震動に関する観測情報  発表  [警告]                                                                                               ║
╠══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╣
║ ２１日０２時２３分ころの地震により、長周期地震動階級３を観測した地域があります。以下の地域では、最大震度は４以下でしたが、               ║
║ 大きな長周期地震動階級（階級３以上）を観測しています。高層ビル高層階では非常に大きな揺れとなっていた可能性があります。宮城県北部         ║
╠══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╣
║ 長周期階級 3  │  最大震度 5-  │  M6.3  │  深さ 30km                                                                                      ║
╠══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╣
║ 震源地: 岩手県沖                                                                                                                         ║
║ 発生: 2020-11-21 02:23:00                                                                                                                ║
║ 位置: N39.6 E142.7                                                                                                                       ║
╠ 観測地域 ════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╣
╠ 長周期3 ═════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╣
║ 地域名                                                                                               │ 最大震度                          ║
║ 宮城県北部                                                                                           │ 震度4                             ║
╠ 長周期1 ═════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╣
║ 地域名                                                                                               │ 最大震度                          ║
║ 岩手県内陸南部                                                                                       │ 震度3                             ║
║ 岩手県内陸北部                                                                                       │ 震度5-                            ║
║ 青森県三八上北                                                                                       │ 震度4                             ║
║ 青森県津軽北部                                                                                       │ 震度3                             ║
╠ サマリ ══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╣
║  長周期3 1 地域 ・ 長周期1 4 地域                                                                                                        ║
╠══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╣
║ 各長周期地震動階級に対する簡易な現象表現                                                                                                 ║
║  階級１やや大きな揺れ                                                                                                                    ║
║  階級２大きな揺れ                                                                                                                        ║
║  階級３非常に大きな揺れ                                                                                                                  ║
║  階級４極めて大きな揺れ                                                                                                                  ║
║ 波形、スペクトル等、本地震の長周期地震動に関する詳細な情報は気象庁の長周期地震動に関する観測情報のウェブサイト　(　https://www.data.jma. ║
║ go.jp/eew/data/ltpgm/20201121100000/index.html　) もあわせてご活用ください。                                                             ║
╠══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╣
║ https://www.data.jma.go.jp/eew/data/ltpgm/202011211100000/index.html                                                                     ║
╠══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╣
║ VXSE62  2020-11-21 02:33:10  気象庁                                                                                                      ║
╚══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╝
"
`;

exports[`NO_COLOR golden snapshot (chalk.level=0) > VXSE62-real @ ultra-narrow=60 1`] = `
"
╔══════════════════════════════════════════════════════════╗
║ 長周期地震動に関する観測情報  発表  [警告]               ║
╠══════════════════════════════════════════════════════════╣
║ ２１日０２時２３分ころの地震により、                     ║
║ 長周期地震動階級３を観測した地域があります。             ║
║ 以下の地域では、最大震度は４以下でしたが、               ║
║ 大きな長周期地震動階級（階級３以上）を観測しています。   ║
║ 高層ビル高層階では非常に大きな揺れとなっていた可能性があ ║
║ ります。宮城県北部                                       ║
╠══════════════════════════════════════════════════════════╣
║ 長周期階級 3  │  最大震度 5-  │  M6.3  │  深さ 30km      ║
╠══════════════════════════════════════════════════════════╣
║ 震源地: 岩手県沖                                         ║
║ 発生: 2020-11-21 02:23:00                                ║
║ 位置: N39.6 E142.7                                       ║
╠ 観測地域 ════════════════════════════════════════════════╣
╠ 長周期3 ═════════════════════════════════════════════════╣
║ 地域名                                      │ 最大震度   ║
║ 宮城県北部                                  │ 震度4      ║
╠ 長周期1 ═════════════════════════════════════════════════╣
║ 地域名                                      │ 最大震度   ║
║ 岩手県内陸南部                              │ 震度3      ║
║ 岩手県内陸北部                              │ 震度5-     ║
║ 青森県三八上北                              │ 震度4      ║
║ 青森県津軽北部                              │ 震度3      ║
╠ サマリ ══════════════════════════════════════════════════╣
║  長周期3 1 地域 ・ 長周期1 4 地域                        ║
╠══════════════════════════════════════════════════════════╣
║ 各長周期地震動階級に対する簡易な現象表現                 ║
║  階級１やや大きな揺れ                                    ║
║  階級２大きな揺れ                                        ║
║  階級３非常に大きな揺れ                                  ║
║  階級４極めて大きな揺れ                                  ║
║ 波形、スペクトル等、本地震の長周期地震動に関する詳細な情 ║
║ 報は気象庁の長周期地震動に関する観測情報のウェブサイト　 ║
║ (　https://www.data.jma.go.jp/eew/data/ltpgm/20201121100 ║
║ 000/index.html　) もあわせてご活用ください。             ║
╠══════════════════════════════════════════════════════════╣
║ https://www.data.jma.go.jp/eew/data/ltpgm/20201121110000 ║
║ 0/index.html                                             ║
╠══════════════════════════════════════════════════════════╣
║ VXSE62  2020-11-21 02:33:10  気象庁                      ║
╚══════════════════════════════════════════════════════════╝
"
`;

exports[`NO_COLOR golden snapshot (chalk.level=0) > VXSE62-real @ wide=180 1`] = `
"
╔══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╗
║ 長周期地震動に関する観測情報  発表  [警告]                                                                                                                                       ║
╠══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╣
║ ２１日０２時２３分ころの地震により、長周期地震動階級３を観測した地域があります。以下の地域では、最大震度は４以下でしたが、大きな長周期地震動階級（階級３以上）を観測しています。 ║
║ 高層ビル高層階では非常に大きな揺れとなっていた可能性があります。宮城県北部                                                                                                       ║
╠══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╣
║ 長周期階級 3  │  最大震度 5-  │  M6.3  │  深さ 30km                                                                                                                              ║
╠══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╣
║ 震源地: 岩手県沖                                                                                                                                                                 ║
║ 発生: 2020-11-21 02:23:00                                                                                                                                                        ║
║ 位置: N39.6 E142.7                                                                                                                                                               ║
╠ 観測地域 ════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╣
╠ 長周期3 ═════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╣
║ 地域名                                                                                                                                                           │ 最大震度      ║
║ 宮城県北部                                                                                                                                                       │ 震度4         ║
╠ 長周期1 ═════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╣
║ 地域名                                                                                                                                                           │ 最大震度      ║
║ 岩手県内陸南部                                                                                                                                                   │ 震度3         ║
║ 岩手県内陸北部                                                                                                                                                   │ 震度5-        ║
║ 青森県三八上北                                                                                                                                                   │ 震度4         ║
║ 青森県津軽北部                                                                                                                                                   │ 震度3         ║
╠ サマリ ══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╣
║  長周期3 1 地域 ・ 長周期1 4 地域                                                                                                                                                ║
╠══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╣
║ 各長周期地震動階級に対する簡易な現象表現                                                                                                                                         ║
║  階級１やや大きな揺れ                                                                                                                                                            ║
║  階級２大きな揺れ                                                                                                                                                                ║
║  階級３非常に大きな揺れ                                                                                                                                                          ║
║  階級４極めて大きな揺れ                                                                                                                                                          ║
║ 波形、スペクトル等、本地震の長周期地震動に関する詳細な情報は気象庁の長周期地震動に関する観測情報のウェブサイト　(　https://www.data.jma.go.jp/eew/data/ltpgm/20201121100000/inde ║
║ x.html　) もあわせてご活用ください。                                                                                                                                             ║
╠══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╣
║ https://www.data.jma.go.jp/eew/data/ltpgm/202011211100000/index.html                                                                                                             ║
╠══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╣
║ VXSE62  2020-11-21 02:33:10  気象庁                                                                                                                                              ║
╚══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╝
"
`;

exports[`NO_COLOR golden snapshot (chalk.level=0) > VXSE62-synthetic-multi @ standard=140 1`] = `
"
╔══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╗
║ 長周期地震動に関する観測情報  発表  [緊急]                                                                                               ║
╠══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╣
║ ２１日０２時２３分ころの地震により、長周期地震動階級３を観測した地域があります。以下の地域では、最大震度は４以下でしたが、               ║
║ 大きな長周期地震動階級（階級３以上）を観測しています。高層ビル高層階では非常に大きな揺れとなっていた可能性があります。宮城県北部         ║
╠══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╣
║ 長周期階級 4  │  最大震度 5-  │  M6.3  │  深さ 30km                                                                                      ║
╠══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╣
║ 震源地: 岩手県沖                                                                                                                         ║
║ 発生: 2020-11-21 02:23:00                                                                                                                ║
║ 位置: N39.6 E142.7                                                                                                                       ║
╠ 観測地域 ════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╣
╠ 長周期4 ═════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╣
║ 地域名                                                                                               │ 最大震度                          ║
║ 合成観測地域03                                                                                       │ 震度4                             ║
║ 合成観測地域07                                                                                       │ 震度3                             ║
║ 合成観測地域11                                                                                       │ 震度2                             ║
║ 合成観測地域15                                                                                       │ 震度1                             ║
║ 合成観測地域19                                                                                       │ 震度5弱                           ║
║ 合成観測地域23                                                                                       │ 震度4                             ║
╠ 長周期3 ═════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╣
║ 地域名                                                                                               │ 最大震度                          ║
║ 合成観測地域02                                                                                       │ 震度3                             ║
║ 合成観測地域06                                                                                       │ 震度2                             ║
║ 合成観測地域10                                                                                       │ 震度1                             ║
║ 合成観測地域14                                                                                       │ 震度5弱                           ║
║ 合成観測地域18                                                                                       │ 震度4                             ║
║ 合成観測地域22                                                                                       │ 震度3                             ║
╠ 長周期2 ═════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╣
║ 地域名                                                                                               │ 最大震度                          ║
║ 合成観測地域01                                                                                       │ 震度2                             ║
║ 合成観測地域05                                                                                       │ 震度1                             ║
║ 合成観測地域09                                                                                       │ 震度5弱                           ║
║ 合成観測地域13                                                                                       │ 震度4                             ║
║ 合成観測地域17                                                                                       │ 震度3                             ║
║ 合成観測地域21                                                                                       │ 震度2                             ║
╠ 長周期1 ═════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╣
║ 地域名                                                                                               │ 最大震度                          ║
║ 合成観測地域00                                                                                       │ 震度1                             ║
║ 合成観測地域04                                                                                       │ 震度5弱                           ║
║ 合成観測地域08                                                                                       │ 震度4                             ║
║ 合成観測地域12                                                                                       │ 震度3                             ║
║ 合成観測地域16                                                                                       │ 震度2                             ║
║ 合成観測地域20                                                                                       │ 震度1                             ║
╠ サマリ ══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╣
║  長周期4 6 地域 ・ 長周期3 6 地域 ・ 長周期2 6 地域 ・ 長周期1 6 地域                                                                    ║
╠══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╣
║ 各長周期地震動階級に対する簡易な現象表現                                                                                                 ║
║  階級１やや大きな揺れ                                                                                                                    ║
║  階級２大きな揺れ                                                                                                                        ║
║  階級３非常に大きな揺れ                                                                                                                  ║
║  階級４極めて大きな揺れ                                                                                                                  ║
║ 波形、スペクトル等、本地震の長周期地震動に関する詳細な情報は気象庁の長周期地震動に関する観測情報のウェブサイト　(　https://www.data.jma. ║
║ go.jp/eew/data/ltpgm/20201121100000/index.html　) もあわせてご活用ください。                                                             ║
╠══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╣
║ https://www.data.jma.go.jp/eew/data/ltpgm/202011211100000/index.html                                                                     ║
╠══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╣
║ VXSE62  2020-11-21 02:33:10  気象庁                                                                                                      ║
╚══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╝
"
`;

exports[`NO_COLOR golden snapshot (chalk.level=0) > VXSE62-synthetic-multi @ ultra-narrow=60 1`] = `
"
╔══════════════════════════════════════════════════════════╗
║ 長周期地震動に関する観測情報  発表  [緊急]               ║
╠══════════════════════════════════════════════════════════╣
║ ２１日０２時２３分ころの地震により、                     ║
║ 長周期地震動階級３を観測した地域があります。             ║
║ 以下の地域では、最大震度は４以下でしたが、               ║
║ 大きな長周期地震動階級（階級３以上）を観測しています。   ║
║ 高層ビル高層階では非常に大きな揺れとなっていた可能性があ ║
║ ります。宮城県北部                                       ║
╠══════════════════════════════════════════════════════════╣
║ 長周期階級 4  │  最大震度 5-  │  M6.3  │  深さ 30km      ║
╠══════════════════════════════════════════════════════════╣
║ 震源地: 岩手県沖                                         ║
║ 発生: 2020-11-21 02:23:00                                ║
║ 位置: N39.6 E142.7                                       ║
╠ 観測地域 ════════════════════════════════════════════════╣
╠ 長周期4 ═════════════════════════════════════════════════╣
║ 地域名                                      │ 最大震度   ║
║ 合成観測地域03                              │ 震度4      ║
║ 合成観測地域07                              │ 震度3      ║
║ 合成観測地域11                              │ 震度2      ║
║ 合成観測地域15                              │ 震度1      ║
║ 合成観測地域19                              │ 震度5弱    ║
║ 合成観測地域23                              │ 震度4      ║
╠ 長周期3 ═════════════════════════════════════════════════╣
║ 地域名                                      │ 最大震度   ║
║ 合成観測地域02                              │ 震度3      ║
║ 合成観測地域06                              │ 震度2      ║
║ 合成観測地域10                              │ 震度1      ║
║ 合成観測地域14                              │ 震度5弱    ║
║ 合成観測地域18                              │ 震度4      ║
║ 合成観測地域22                              │ 震度3      ║
╠ 長周期2 ═════════════════════════════════════════════════╣
║ 地域名                                      │ 最大震度   ║
║ 合成観測地域01                              │ 震度2      ║
║ 合成観測地域05                              │ 震度1      ║
║ 合成観測地域09                              │ 震度5弱    ║
║ 合成観測地域13                              │ 震度4      ║
║ 合成観測地域17                              │ 震度3      ║
║ 合成観測地域21                              │ 震度2      ║
╠ 長周期1 ═════════════════════════════════════════════════╣
║ 地域名                                      │ 最大震度   ║
║ 合成観測地域00                              │ 震度1      ║
║ 合成観測地域04                              │ 震度5弱    ║
║ 合成観測地域08                              │ 震度4      ║
║ 合成観測地域12                              │ 震度3      ║
║ 合成観測地域16                              │ 震度2      ║
║ 合成観測地域20                              │ 震度1      ║
╠ サマリ ══════════════════════════════════════════════════╣
║  長周期4 6 地域 ・ 長周期3 6 地域 ・ 長周期2 6 地域 ・ … ║
╠══════════════════════════════════════════════════════════╣
║ 各長周期地震動階級に対する簡易な現象表現                 ║
║  階級１やや大きな揺れ                                    ║
║  階級２大きな揺れ                                        ║
║  階級３非常に大きな揺れ                                  ║
║  階級４極めて大きな揺れ                                  ║
║ 波形、スペクトル等、本地震の長周期地震動に関する詳細な情 ║
║ 報は気象庁の長周期地震動に関する観測情報のウェブサイト　 ║
║ (　https://www.data.jma.go.jp/eew/data/ltpgm/20201121100 ║
║ 000/index.html　) もあわせてご活用ください。             ║
╠══════════════════════════════════════════════════════════╣
║ https://www.data.jma.go.jp/eew/data/ltpgm/20201121110000 ║
║ 0/index.html                                             ║
╠══════════════════════════════════════════════════════════╣
║ VXSE62  2020-11-21 02:33:10  気象庁                      ║
╚══════════════════════════════════════════════════════════╝
"
`;

exports[`NO_COLOR golden snapshot (chalk.level=0) > VXSE62-synthetic-multi @ wide=180 1`] = `
"
╔══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╗
║ 長周期地震動に関する観測情報  発表  [緊急]                                                                                                                                       ║
╠══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╣
║ ２１日０２時２３分ころの地震により、長周期地震動階級３を観測した地域があります。以下の地域では、最大震度は４以下でしたが、大きな長周期地震動階級（階級３以上）を観測しています。 ║
║ 高層ビル高層階では非常に大きな揺れとなっていた可能性があります。宮城県北部                                                                                                       ║
╠══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╣
║ 長周期階級 4  │  最大震度 5-  │  M6.3  │  深さ 30km                                                                                                                              ║
╠══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╣
║ 震源地: 岩手県沖                                                                                                                                                                 ║
║ 発生: 2020-11-21 02:23:00                                                                                                                                                        ║
║ 位置: N39.6 E142.7                                                                                                                                                               ║
╠ 観測地域 ════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╣
╠ 長周期4 ═════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╣
║ 地域名                                                                                                                                                           │ 最大震度      ║
║ 合成観測地域03                                                                                                                                                   │ 震度4         ║
║ 合成観測地域07                                                                                                                                                   │ 震度3         ║
║ 合成観測地域11                                                                                                                                                   │ 震度2         ║
║ 合成観測地域15                                                                                                                                                   │ 震度1         ║
║ 合成観測地域19                                                                                                                                                   │ 震度5弱       ║
║ 合成観測地域23                                                                                                                                                   │ 震度4         ║
╠ 長周期3 ═════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╣
║ 地域名                                                                                                                                                           │ 最大震度      ║
║ 合成観測地域02                                                                                                                                                   │ 震度3         ║
║ 合成観測地域06                                                                                                                                                   │ 震度2         ║
║ 合成観測地域10                                                                                                                                                   │ 震度1         ║
║ 合成観測地域14                                                                                                                                                   │ 震度5弱       ║
║ 合成観測地域18                                                                                                                                                   │ 震度4         ║
║ 合成観測地域22                                                                                                                                                   │ 震度3         ║
╠ 長周期2 ═════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╣
║ 地域名                                                                                                                                                           │ 最大震度      ║
║ 合成観測地域01                                                                                                                                                   │ 震度2         ║
║ 合成観測地域05                                                                                                                                                   │ 震度1         ║
║ 合成観測地域09                                                                                                                                                   │ 震度5弱       ║
║ 合成観測地域13                                                                                                                                                   │ 震度4         ║
║ 合成観測地域17                                                                                                                                                   │ 震度3         ║
║ 合成観測地域21                                                                                                                                                   │ 震度2         ║
╠ 長周期1 ═════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╣
║ 地域名                                                                                                                                                           │ 最大震度      ║
║ 合成観測地域00                                                                                                                                                   │ 震度1         ║
║ 合成観測地域04                                                                                                                                                   │ 震度5弱       ║
║ 合成観測地域08                                                                                                                                                   │ 震度4         ║
║ 合成観測地域12                                                                                                                                                   │ 震度3         ║
║ 合成観測地域16                                                                                                                                                   │ 震度2         ║
║ 合成観測地域20                                                                                                                                                   │ 震度1         ║
╠ サマリ ══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╣
║  長周期4 6 地域 ・ 長周期3 6 地域 ・ 長周期2 6 地域 ・ 長周期1 6 地域                                                                                                            ║
╠══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╣
║ 各長周期地震動階級に対する簡易な現象表現                                                                                                                                         ║
║  階級１やや大きな揺れ                                                                                                                                                            ║
║  階級２大きな揺れ                                                                                                                                                                ║
║  階級３非常に大きな揺れ                                                                                                                                                          ║
║  階級４極めて大きな揺れ                                                                                                                                                          ║
║ 波形、スペクトル等、本地震の長周期地震動に関する詳細な情報は気象庁の長周期地震動に関する観測情報のウェブサイト　(　https://www.data.jma.go.jp/eew/data/ltpgm/20201121100000/inde ║
║ x.html　) もあわせてご活用ください。                                                                                                                                             ║
╠══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╣
║ https://www.data.jma.go.jp/eew/data/ltpgm/202011211100000/index.html                                                                                                             ║
╠══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╣
║ VXSE62  2020-11-21 02:33:10  気象庁                                                                                                                                              ║
╚══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╝
"
`;
